force-app/main/default/objects/Rostering__c/Rostering__c.object-meta.xml
<CustomObject>
    <label>Rostering</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Rostering Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rosterings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>