force-app/main/default/objects/Rostering__c/fields/Additional_Work_Day__c.field-meta.xml
<CustomField>
    <fullName>Additional_Work_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Work Day</label>
    <type>Checkbox</type>
</CustomField>