force-app/main/default/objects/Rostering__c/fields/PayItem__c.field-meta.xml
<CustomField>
    <fullName>PayItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PayItem</label>
    <referenceTo>PayItem__c</referenceTo>
    <relationshipLabel>Rosterings</relationshipLabel>
    <relationshipName>Rosterings</relationshipName>
    <type>Lookup</type>
</CustomField>