force-app/main/default/objects/Rostering__c/fields/Shift__c.field-meta.xml
<CustomField>
    <fullName>Shift__c</fullName>
    <label>Shift</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regular Hours</fullName>
            </value>
            <value>
                <fullName>Opening Hours</fullName>
            </value>
            <value>
                <fullName>Closing Hours</fullName>
            </value>
            <value>
                <fullName>Exam Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>