force-app/main/default/objects/Rostering__c/fields/Work_Day__c.field-meta.xml
<CustomField>
    <fullName>Work_Day__c</fullName>
    <label>Work Day</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Day</fullName>
            </value>
            <value>
                <fullName>Half Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>